# rsvc

./: .dockerignore  .gitignore  .gitmodules  .gn  BUILD.gn  Makefile  configure  defaults.gypi  rsvc.gyp  wscript
doc/: conf.py  index.rst
ext/discid/: BUILD.gn  discid.gyp  wscript
ext/discid/darwin/: config.h
ext/discid/libdiscid-0.6.1/: Makefile.in  configure  versioninfo.rc
ext/flac/: BUILD.gn  flac.gyp  wscript
ext/flac/darwin/: config.h
ext/lame/: BUILD.gn  lame.gyp  wscript
ext/lame/include/lame/: lame.h
ext/libmusicbrainz/: libmusicbrainz.gyp  wscript
ext/libmusicbrainz/c/: mb4_c.cc
ext/libmusicbrainz/include/: config.h
ext/libmusicbrainz/include/musicbrainz4/: mb4_c.h
ext/libmusicbrainz/libmusicbrainz-4.0.0/examples/: cdlookup.cc  collections.cc  search.cc
ext/libmusicbrainz/libmusicbrainz-4.0.0/include/musicbrainz4/: Alias.h  AliasList.h  Annotation.h  AnnotationList.h  Artist.h  ArtistCredit.h  ArtistList.h  Attribute.h  AttributeList.h  CDStub.h  CDStubList.h  Collection.h  CollectionList.h  Disc.h  DiscList.h  Entity.h  FreeDBDisc.h  FreeDBDiscList.h  HTTPFetch.h  ISRC.h  ISRCList.h  Label.h  LabelInfo.h  LabelInfoList.h  LabelList.h  Lifespan.h  List.h  ListImpl.h  Medium.h  MediumList.h  Message.h  Metadata.h  NameCredit.h  NameCreditList.h  NonMBTrack.h  NonMBTrackList.h  PUID.h  PUIDList.h  Query.h  Rating.h  (+18 more)
ext/libmusicbrainz/libmusicbrainz-4.0.0/schema/: musicbrainz_mmd-1.0.rng  musicbrainz_mmd-1.0rc1.rng  musicbrainz_mmd-1.0rc2.rng  musicbrainz_mmd-1.0rc3.rng  musicbrainz_mmd-1.0rc4.rng  musicbrainz_mmd-1.0rc5.rng  musicbrainz_mmd-1.1.rng  musicbrainz_mmd-1.2.rng  musicbrainz_mmd-1.3.rng  musicbrainz_mmd-1.4.rng
ext/libmusicbrainz/libmusicbrainz-4.0.0/src/: Alias.cc  Annotation.cc  Artist.cc  ArtistCredit.cc  Attribute.cc  CDStub.cc  Collection.cc  Disc.cc  Entity.cc  FreeDBDisc.cc  HTTPFetch.cc  ISRC.cc  Label.cc  LabelInfo.cc  Lifespan.cc  List.cc  Medium.cc  MediumList.cc  Message.cc  Metadata.cc  NameCredit.cc  NonMBTrack.cc  PUID.cc  Query.cc  Rating.cc  Recording.cc  Relation.cc  RelationList.cc  Release.cc  ReleaseGroup.cc  Tag.cc  TextRepresentation.cc  Track.cc  UserRating.cc  UserTag.cc  Work.cc  c-int-medium-defines.inc  c-int-medium-source.inc  c-int-query-defines.inc  c-int-query-source.inc  (+5 more)
ext/libmusicbrainz/libmusicbrainz-4.0.0/tests/: ctest.c  mbtest.cc
ext/mad/: BUILD.gn  mad.gyp  wscript
ext/mb5/: BUILD.gn
ext/mb5/c/: mb5_c.cc
ext/mp4v2/: BUILD.gn  mp4v2.gyp  wscript
ext/mp4v2/darwin/libplatform/: config.h
ext/mp4v2/mp4v2-2.0.0/include/mp4v2/: project.h
ext/mp4v2/mp4v2-2.0.0/src/: mp4.cpp
ext/mp4v2/mp4v2-trunk-r479/: configure
ext/mp4v2/mp4v2-trunk-r479/doc/: Authors.txt  BuildRepository.txt  BuildSource.txt  Documentation.txt  ReleaseNotes.txt  ToolGuide.txt
ext/mp4v2/mp4v2-trunk-r479/doc/man/man1/: mp4art.1  mp4file.1  mp4subtitle.1  mp4track.1
ext/mp4v2/mp4v2-trunk-r479/include/mp4v2/: project.h
ext/mp4v2/mp4v2-trunk-r479/project/: project.m4
ext/neon/: BUILD.gn  neon.gyp  wscript
ext/neon/darwin/: config.h
ext/neon/include/: memleak.h  ne_207.h  ne_acl.h  ne_acl3744.h  ne_alloc.h  ne_auth.h  ne_basic.h  ne_compress.h  ne_dates.h  ne_defs.h  ne_i18n.h  ne_internal.h  ne_locks.h  ne_md5.h  ne_ntlm.h  ne_pkcs11.h  ne_private.h  ne_privssl.h  ne_props.h  ne_redirect.h  ne_request.h  ne_session.h  ne_socket.h  ne_ssl.h  ne_sspi.h  ne_string.h  ne_uri.h  ne_utils.h  ne_xml.h  ne_xmlreq.h
ext/neon/neon-0.30.2/: Makefile  config.status  libtool  neon-config  neon.pc
ext/neon/neon-0.30.2/src/: Makefile
ext/neon/neon-0.30.2/test/: Makefile  makekeys
ext/ogg/: BUILD.gn  ogg.gyp  wscript
ext/opus/: BUILD.gn  opus.gyp
ext/opus/darwin/: config.h
ext/opusfile/: BUILD.gn  opusfile.gyp
ext/taglib/: BUILD.gn
ext/utf8cpp/: BUILD.gn
ext/vorbis/: BUILD.gn  vorbis.gyp  wscript
ext/vorbis/darwin/: config.h
include/rsvc/: audio.h  cancel.h  cd.h  comment.h  common.h  core-audio.h  decode.h  disc.h  encode.h  flac.h  format.h  forward.h  gif.h  id3.h  image.h  jpeg.h  lame.h  mad.h  mp4.h  musicbrainz.h  png.h  tag.h  vorbis.h
resources/AudioCDView.nib/: designable.nib  keyedobjects.nib
resources/MainMenu.nib/: designable.nib  keyedobjects.nib
scripts/: cfg.py  doc.sh  generate-info-plist.py  ioctl.d  unix-test.sh
src/app/: app-delegate.h  app-delegate.m  audio-cd-controller.h  audio-cd-controller.m  source-list-cell.h  source-list-cell.m  source-list.h  source-list.m
src/rsvc/: audio.c  audio.h  cancel.c  cancel.h  cd.c  cd_darwin.c  cd_linux.c  comment.c  common.c  common.h  core-audio.c  disc.c  disc.h  disc_darwin.c  disc_linux.c  encode.c  encoding.c  encoding.h  flac.c  format.c  gif.c  group.c  group.h  id3.c  image.c  jpeg.c  lame.c  list.h  mad.c  mb4.h  mb5.h  mp4.c  musicbrainz.c  ogg.c  ogg.h  options.c  options.h  opus.c  png.c  posix.c  (+10 more)
